--- a/release/author.html
+++ b/release/author.html
@@ -117,7 +117,7 @@
                     <div class="col s12">
                         <h2>Галерея</h2>
                     </div>
-                    <div class="col l4 m6 s12 gallery-entry dark">
+                    <div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/belle.jpg"></div>
@@ -167,7 +167,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry light">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/blue-flower.jpg"></div>
@@ -217,7 +217,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/flower-infinity.jpg"></div>
@@ -267,7 +267,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/friday-evening.jpg"></div>
@@ -317,7 +317,7 @@
             <a href="/author.html">Марко Капелло</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/kitty.jpg"></div>
@@ -367,7 +367,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lime.jpg"></div>
@@ -417,7 +417,7 @@
             <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lotus.jpg"></div>
@@ -467,7 +467,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/mistery_island.jpg"></div>
@@ -517,7 +517,7 @@
             <a href="/author.html">Анонина Павлова</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry light">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/narcis.jpg"></div>
@@ -567,7 +567,7 @@
             <a href="/author.html">Иван Григорович</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/naturemort.jpg"></div>
@@ -617,7 +617,7 @@
             <a href="/author.html">Александр Сухоруков</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/piano.jpg"></div>
@@ -667,7 +667,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/pomegranate.jpg"></div>
@@ -1490,7 +1490,7 @@
         </div>
         <div class="modal-actions">
             <a class="btn btn-flat modal-close">Закрыть</a>
-            <a class="btn right modal-close">Войти</a>
+            <a href="/profile.html" class="btn right">Войти</a>
         </div>
     </div>
 </div>
