--- a/release/index.html
+++ b/release/index.html
@@ -90,7 +90,7 @@
                     <div class="col s12">
                         <h2>Галерея</h2>
                         <div class="masonry-grid">
-                            <div class="gallery-entry dark">
+                            <div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -140,7 +140,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="gallery-entry light">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -190,7 +190,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -240,7 +240,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -290,7 +290,7 @@
             <a href="/author.html">Марко Капелло</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -340,7 +340,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -390,7 +390,7 @@
             <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -440,7 +440,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -490,7 +490,7 @@
             <a href="/author.html">Анонина Павлова</a>
         </div>
     </div>
-</div><div class="gallery-entry light">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -540,7 +540,7 @@
             <a href="/author.html">Иван Григорович</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -590,7 +590,7 @@
             <a href="/author.html">Александр Сухоруков</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -640,7 +640,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="gallery-entry dark">
+</div><div class="gallery-entry @@colors">
     <div class="image lazy">
         <div class="info-trigger"><i class="mdi mdi-information-outline"></i></div>
         <div class="info">
@@ -1401,7 +1401,7 @@
         </div>
         <div class="modal-actions">
             <a class="btn btn-flat modal-close">Закрыть</a>
-            <a class="btn right modal-close">Войти</a>
+            <a href="/profile.html" class="btn right">Войти</a>
         </div>
     </div>
 </div>
