--- a/release/product.html
+++ b/release/product.html
@@ -186,7 +186,7 @@
                     <div class="col s12">
                         <div class="swiper-container" id="same-author">
                             <div class="swiper-wrapper">
-                                <div class="swiper-entry swiper-slide dark">
+                                <div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/belle.jpg"></div>
@@ -236,7 +236,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide light">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/blue-flower.jpg"></div>
@@ -286,7 +286,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/flower-infinity.jpg"></div>
@@ -336,7 +336,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/friday-evening.jpg"></div>
@@ -386,7 +386,7 @@
             <a href="/author.html">Марко Капелло</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/kitty.jpg"></div>
@@ -436,7 +436,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lime.jpg"></div>
@@ -486,7 +486,7 @@
             <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lotus.jpg"></div>
@@ -536,7 +536,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/mistery_island.jpg"></div>
@@ -586,7 +586,7 @@
             <a href="/author.html">Анонина Павлова</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide light">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/narcis.jpg"></div>
@@ -636,7 +636,7 @@
             <a href="/author.html">Иван Григорович</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/naturemort.jpg"></div>
@@ -686,7 +686,7 @@
             <a href="/author.html">Александр Сухоруков</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/piano.jpg"></div>
@@ -736,7 +736,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/pomegranate.jpg"></div>
@@ -806,7 +806,7 @@
                     <div class="col s12">
                         <div class="swiper-container" id="same-style">
                             <div class="swiper-wrapper">
-                                <div class="swiper-entry swiper-slide dark">
+                                <div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/belle.jpg"></div>
@@ -856,7 +856,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide light">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/blue-flower.jpg"></div>
@@ -906,7 +906,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/flower-infinity.jpg"></div>
@@ -956,7 +956,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/friday-evening.jpg"></div>
@@ -1006,7 +1006,7 @@
             <a href="/author.html">Марко Капелло</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/kitty.jpg"></div>
@@ -1056,7 +1056,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lime.jpg"></div>
@@ -1106,7 +1106,7 @@
             <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lotus.jpg"></div>
@@ -1156,7 +1156,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/mistery_island.jpg"></div>
@@ -1206,7 +1206,7 @@
             <a href="/author.html">Анонина Павлова</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide light">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/narcis.jpg"></div>
@@ -1256,7 +1256,7 @@
             <a href="/author.html">Иван Григорович</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/naturemort.jpg"></div>
@@ -1306,7 +1306,7 @@
             <a href="/author.html">Александр Сухоруков</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/piano.jpg"></div>
@@ -1356,7 +1356,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="swiper-entry swiper-slide dark">
+</div><div class="swiper-entry swiper-slide @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/pomegranate.jpg"></div>
@@ -2166,7 +2166,7 @@
         </div>
         <div class="modal-actions">
             <a class="btn btn-flat modal-close">Закрыть</a>
-            <a class="btn right modal-close">Войти</a>
+            <a href="/profile.html" class="btn right">Войти</a>
         </div>
     </div>
 </div>
