--- a/src/html/parts/modals.html
+++ b/src/html/parts/modals.html
@@ -46,7 +46,7 @@
         </div>
         <div class="modal-actions">
             <a class="btn btn-flat modal-close">Закрыть</a>
-            <a class="btn right modal-close">Войти</a>
+            <a href="/profile.html" class="btn right">Войти</a>
         </div>
     </div>
 </div>
