--- a/release/authors.html
+++ b/release/authors.html
@@ -2071,7 +2071,7 @@
         </div>
         <div class="modal-actions">
             <a class="btn btn-flat modal-close">Закрыть</a>
-            <a class="btn right modal-close">Войти</a>
+            <a href="/profile.html" class="btn right">Войти</a>
         </div>
     </div>
 </div>
