--- a/release/gallery.html
+++ b/release/gallery.html
@@ -63,7 +63,7 @@
                     <div class="col s12">
                         <h1>Галерея</h1>
                     </div>
-                    <div class="col l4 m6 s12 gallery-entry dark">
+                    <div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/belle.jpg"></div>
@@ -113,7 +113,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry light">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/blue-flower.jpg"></div>
@@ -163,7 +163,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/flower-infinity.jpg"></div>
@@ -213,7 +213,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/friday-evening.jpg"></div>
@@ -263,7 +263,7 @@
             <a href="/author.html">Марко Капелло</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/kitty.jpg"></div>
@@ -313,7 +313,7 @@
             <a href="/author.html">Екатерина Сапельникова</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lime.jpg"></div>
@@ -363,7 +363,7 @@
             <a href="/author.html">Снежана Авдеева</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/lotus.jpg"></div>
@@ -413,7 +413,7 @@
             <a href="/author.html">Михаил Черенков</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/mistery_island.jpg"></div>
@@ -463,7 +463,7 @@
             <a href="/author.html">Анонина Павлова</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry light">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/narcis.jpg"></div>
@@ -513,7 +513,7 @@
             <a href="/author.html">Иван Григорович</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/naturemort.jpg"></div>
@@ -563,7 +563,7 @@
             <a href="/author.html">Александр Сухоруков</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/piano.jpg"></div>
@@ -613,7 +613,7 @@
             <a href="/author.html">Ольга Кононович</a>
         </div>
     </div>
-</div><div class="col l4 m6 s12 gallery-entry dark">
+</div><div class="col l4 m6 s12 gallery-entry @@colors">
     <div class="image lazy">
         <a href="/product.html">
             <div class="lazy" data-src="/img/gallery/pomegranate.jpg"></div>
@@ -1430,7 +1430,7 @@
         </div>
         <div class="modal-actions">
             <a class="btn btn-flat modal-close">Закрыть</a>
-            <a class="btn right modal-close">Войти</a>
+            <a href="/profile.html" class="btn right">Войти</a>
         </div>
     </div>
 </div>
