--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -4,7 +4,7 @@
             <div class="logo"></div>
         </div>
         <div class="footer-main">
-            <div class="row">
+            <div class="row flex">
                 <div class="col m4">
                     <ul>
                         <li><a href="">Главная</a></li>
@@ -17,7 +17,8 @@
                     </ul>
                 </div>
                 <div class="col m8 s12">
-                    <div class="row">
+                    <!-- Данные еще не отправлены -->
+                    <div class="row hidden">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -46,6 +47,15 @@
                             </div>
                         </div>
                     </div>
+                    <!-- / -->
+                    <!-- Данные успешно отправлены -->
+                    <div class="footer-success center-align">
+                        <p>
+                            <i class="mdi mdi-check-circle green-text"></i>
+                        </p>
+                        <p>Ваше сообщение успешно отправлено</p>
+                    </div>
+                    <!-- / -->
                 </div>
             </div>
         </div>
