--- a/release/authors.html
+++ b/release/authors.html
@@ -28,10 +28,27 @@
             </li>
         </ul>
         <div class="nav-actions">
+            <!-- Неавторизованный пользователь -->
+            <div class="hidden">
+                <a href="#login" class="btn btn-small modal-trigger">
+                    <span class="white-text">Войти</span>
+                </a>
+            </div>
+            <!-- / -->
+            <!-- Авторизованный пользователь -->
+            <ul class="profile-menu">
+                <li>
+                    <i class="mdi mdi-account-circle"></i>
+                </li>
+                <li>
+                    <ul class="profile-menu-inner">
+                        <li><a href="/profile.html">Профиль</a></li>
+                        <li><a href="/">Выход</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <!-- / -->
             <a class="search-trigger"><i class="mdi mdi-magnify"></i></a>
-            <a href="#login" class="btn btn-small modal-trigger">
-                <span class="white-text">Войти</span>
-            </a>
         </div>
         <div class="burger-wrapper">
             <a href="#mobile-navi" class="sidenav-trigger">
@@ -1973,7 +1990,7 @@
             <div class="logo"></div>
         </div>
         <div class="footer-main">
-            <div class="row">
+            <div class="row flex">
                 <div class="col m4">
                     <ul>
                         <li><a href="">Главная</a></li>
@@ -1986,7 +2003,8 @@
                     </ul>
                 </div>
                 <div class="col m8 s12">
-                    <div class="row">
+                    <!-- Данные еще не отправлены -->
+                    <div class="row hidden">
                         <div class="col s12">
                             <div class="form-header">Обратная связь</div>
                         </div>
@@ -2015,6 +2033,15 @@
                             </div>
                         </div>
                     </div>
+                    <!-- / -->
+                    <!-- Данные успешно отправлены -->
+                    <div class="footer-success center-align">
+                        <p>
+                            <i class="mdi mdi-check-circle green-text"></i>
+                        </p>
+                        <p>Ваше сообщение успешно отправлено</p>
+                    </div>
+                    <!-- / -->
                 </div>
             </div>
         </div>
@@ -2025,7 +2052,7 @@
 <script src="/js/master.js"></script>
     <div class="searcher">
     <div class="form-wrapper">
-        <div class="input-field"><input type="text" placeholder="Например, название картины"><label for="">Поиск</label></div>
+        <div class="input-field"><input class="styled" type="text" placeholder="Например, название картины"><label for="">Поиск</label></div>
         <div class="buttons">
             <a class="btn btn-flat close-search">Закрыть</a>
             <a class="btn right">Поиск</a>
@@ -2072,6 +2099,22 @@
         <div class="modal-actions">
             <a class="btn btn-flat modal-close">Закрыть</a>
             <a href="/profile.html" class="btn right">Войти</a>
+        </div>
+    </div>
+</div>
+<div id="city-selector" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">Выбор города</div>
+        <div class="input-field">
+            <input type="text" id="regions" placeholder="Например, Краснодарский край" class="autocomplete styled">
+            <label for="">Укажите регион</label>
+        </div>
+        <div class="input-field">
+            <input type="text" id="cities" placeholder="Например, Краснодар" class="autocomplete styled">
+            <label for="">Укажите город</label>
+        </div>
+        <div class="modal-actions">
+            <a href="" class="btn btn-flat">Закрыть</a><a href="" class="btn btn right">Принять</a>
         </div>
     </div>
 </div>
