--- a/src/html/parts/navi.html
+++ b/src/html/parts/navi.html
@@ -38,6 +38,7 @@
             <a class="search-trigger"><i class="mdi mdi-magnify"></i></a>
         </div>
         <div class="burger-wrapper">
+            <a class="mobile-searcher search-trigger gold-text"><i class="mdi mdi-magnify"></i></a>
             <a href="#mobile-navi" class="sidenav-trigger">
                 <i class="mdi mdi-menu"></i>
             </a>
