--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,3 +1,6 @@
+<a class="floating-action-button">
+    <i class="mdi mdi-cloud-upload"></i>
+</a>
 <footer>
     <div class="container">
         <div class="logo-wrapper">
