--- a/release/product.html
+++ b/release/product.html
@@ -2080,7 +2080,10 @@
             </div>
         </section>
     </div>
-    <footer>
+    <a class="floating-action-button">
+    <i class="mdi mdi-cloud-upload"></i>
+</a>
+<footer>
     <div class="container">
         <div class="logo-wrapper">
             <div class="logo"></div>
