--- a/release/profile.html
+++ b/release/profile.html
@@ -751,7 +751,10 @@
             </div>
         </section>
     </div>
-    <footer>
+    <a class="floating-action-button">
+    <i class="mdi mdi-cloud-upload"></i>
+</a>
+<footer>
     <div class="container">
         <div class="logo-wrapper">
             <div class="logo"></div>
