--- a/src/html/parts/gallery-entry-main.html
+++ b/src/html/parts/gallery-entry-main.html
@@ -28,7 +28,7 @@
             </div>
             <div class="separator"></div>
             <div class="info-actions">
-                <a href=""><i class="mdi mdi-monitor-screenshot"></i></a>
+                <a class="action-preview"><i class="mdi mdi-monitor-screenshot"></i></a>
                 <a href=""><i class="mdi mdi-share-variant"></i></a>
                 @@if(liked==true){
                     <a href=""><i class="mdi mdi-heart"></i></a>
@@ -39,7 +39,7 @@
             </div>
         </div>
         <a href="/product.html">
-            <img class="lazy" data-src="@@image">
+            <img class="lazy materialboxed" data-src="@@image">
         </a>
     </div>
     <div class="info-small">
