--- a/src/html/parts/navi.html
+++ b/src/html/parts/navi.html
@@ -35,9 +35,15 @@
                 </li>
             </ul>
             <!-- / -->
+            <div class="favs">
+                <a class="favs-link" href="favorites.html"><i class="mdi mdi-heart"></i><span class="count">3</span></a>
+            </div>
             <a class="search-trigger"><i class="mdi mdi-magnify"></i></a>
         </div>
         <div class="burger-wrapper">
+            <div class="favs-mobile">
+                <a class="favs-link" href="favorites.html"><i class="mdi mdi-heart"></i><span class="count">3</span></a>
+            </div>
             <a class="mobile-searcher search-trigger gold-text"><i class="mdi mdi-magnify"></i></a>
             <a href="#mobile-navi" class="sidenav-trigger">
                 <i class="mdi mdi-menu"></i>
