--- a/src/html/parts/gallery-entry-catalog.html
+++ b/src/html/parts/gallery-entry-catalog.html
@@ -31,7 +31,7 @@
             </div>
             <div class="separator"></div>
             <div class="info-actions">
-                <a href=""><i class="mdi mdi-monitor-screenshot"></i></a>
+                <a class="action-preview"><i class="mdi mdi-monitor-screenshot"></i></a>
                 <a href=""><i class="mdi mdi-share-variant"></i></a>
                 @@if(liked==true){
                     <a href=""><i class="mdi mdi-heart"></i></a>
